[package]
name = "blog3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
ethers = "1.0.2"
image = "0.24.5"
tokio = { version = "1.25.0", features = ["full"] }
serde_json = "1.0.93"
serde = "1.0.152"