[package]
name = "blog3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
ethers = "1.0.2"
ethers-core = "1.0.2"
image = "0.24.5"
serde_json = "1.0.93"
serde = "1.0.152"
js-sys = "0.3.61"
web-sys = "0.3.61"


